# connectedhomeip

./: .gitignore  diagnostic_data_parser.py  tlv_parser.py  tlv_parser_bytes.py
config/esp32/components/chip/: CMakeLists.txt  Kconfig
examples/bridge-app/bridge-common/: bridge-app.zap
examples/bridge-app/esp32-window-covering/: README.md
examples/bridge-app/esp32-window-covering/main/: Device.cpp  DeviceCallbacks.cpp  main.cpp
examples/bridge-app/esp32-window-covering/main/include/: Device.h  DeviceCallbacks.h
examples/camera-controller/android/: build.gradle  gradle.properties  local.properties  settings.gradle
examples/camera-controller/android/app/: build.gradle  proguard-rules.pro
examples/camera-controller/android/chip-library/: build.gradle
examples/closure-app/closure-common/include/: ClosureControlEndpoint.h  ClosureDimensionEndpoint.h
examples/closure-app/closure-common/src/: ClosureControlEndpoint.cpp  ClosureDimensionEndpoint.cpp
examples/closure-app/linux/: ClosureManager.cpp
examples/closure-app/silabs/src/: ClosureManager.cpp
examples/energy-gateway-app/esp32/main/: CMakeLists.txt
examples/energy-management-app/esp32/main/: CMakeLists.txt
examples/evse-app/esp32/: README.md
examples/evse-app/esp32/main/: main.cpp
examples/lighting-app/esp32/main/: CMakeLists.txt  MockSubImageProcessor.cpp  MockSubImageProcessor.h  main.cpp
examples/platform/esp32/common/: Esp32AppServer.cpp  FactoryResetTestEventTriggerHandler.cpp  FactoryResetTestEventTriggerHandler.h
examples/platform/esp32/diagnostics/: diagnostic-logs-provider-delegate-impl.cpp  diagnostic-logs-provider-delegate-impl.h
examples/temperature-measurement-app/esp32/: DIAGNOSTICS_DEMO_README.md  partitions.csv
examples/temperature-measurement-app/esp32/main/: DeviceCallbacks.cpp  Kconfig.projbuild  diagnostic-logs-provider-delegate-impl.cpp  main.cpp
examples/temperature-measurement-app/esp32/prebuild/: README.md
examples/temperature-measurement-app/esp32/tools/: README.md  tlv_diagnostic_parser.py
examples/water-heater-app/esp32/main/: Kconfig.projbuild  main.cpp
scripts/tools/: check_includes_config.py
scripts/tools/esp32/ota/: README.md  chip-test-image.ota  chip-test-multi-images.ota  chip-test-patch-encrypt-image.ota  chip-test-patch-image.ota  gen_multi_ota.sh
scripts/tools/esp32/ota/binarys/: images_encrypt.csv  (+1 more)
src/app/clusters/closure-control-server/: ClosureControlCluster.cpp  ClosureControlCluster.h  ClosureControlClusterObjects.h  CodegenIntegration.cpp  CodegenIntegration.h  README.md
src/app/clusters/closure-dimension-server/: ClosureDimensionCluster.cpp  ClosureDimensionCluster.h  ClosureDimensionClusterDelegate.h  ClosureDimensionClusterLogic.cpp  ClosureDimensionClusterLogic.h  ClosureDimensionClusterMatterContext.cpp  ClosureDimensionClusterMatterContext.h  ClosureDimensionClusterObjects.h  CodegenIntegration.cpp  CodegenIntegration.h  README.md  app_config_dependent_sources.cmake  app_config_dependent_sources.gni  closure-dimension-cluster-logic.h  closure-dimension-cluster-objects.h  closure-dimension-server.h
src/app/clusters/diagnostic-logs-server/: DiagnosticLogsCluster.cpp  DiagnosticLogsCluster.h  DiagnosticLogsLogic.cpp  DiagnosticLogsLogic.h
src/app/common/templates/: config-data.yaml
src/app/tests/: BUILD.gn  TestClosureDimensionCluster.cpp
src/platform/ESP32/: ConnectivityManagerImpl.h  ConnectivityManagerImpl_WiFi.cpp  ESP32FactoryDataProvider.cpp  OTAImageProcessorImpl.cpp
src/platform/ESP32/multi-ota/: AppImageProcessor.cpp  AppImageProcessor.h  BDX.md  BDX_Spec_And_SDK.txt  DESIGN.md  IMPLEMENTATION.md  MATTER_OTA_CODE_REFERENCE.md  MultiImageHeader.h  MultiImageOTAProcessorImpl.cpp  MultiImageOTAProcessorImpl.h  OTA_FLOW.txt  README.md  SubImageProcessor.h
src/platform/ESP32/multi-ota/tests/: BUILD.gn  README.md  TestAppImageProcessor.cpp  TestEncryptedOTAHelper.cpp  TestMultiImageOTAProcessor.cpp  TestMultiOTAImageHeader.cpp
src/platform/ESP32/multi-ota/tests/mocks/: esp_app_format.h  esp_delta_ota.h  esp_encrypted_img.h  esp_encrypted_img_mock.cpp  esp_encrypted_img_mock.h  esp_err.h  esp_ota_mock.cpp  esp_ota_mock.h  esp_ota_ops.h  esp_partition.h  esp_system.h  ota_requestor_stub.cpp
src/platform/ESP32/multi-ota/tests/mocks/platform/ESP32/: ESP32Utils.h
src/platform/ESP32/nimble/: BLEManagerImpl.cpp
src/tools/PICS-generator/: PICSGenerator.py
src/tracing/: metric_keys.h
src/tracing/esp32_diagnostic_trace/: BUILD.gn  Counter.cpp  Counter.h  DiagnosticStorage.h  DiagnosticStorageManager.cpp  DiagnosticStorageManager.h  DiagnosticTracing.cpp  DiagnosticTracing.h  Diagnostics.h  NVSDiagnosticStorage.cpp  NVSDiagnosticStorage.h  StorageInterface.h  counter.cpp  counter.h  diagnostic_storage.cpp  diagnostic_storage.h  diagnostic_tracing.cpp  diagnostic_tracing.h  diagnostics.h  in_memory_diagnostic_storage.cpp  in_memory_diagnostic_storage.h
src/tracing/esp32_diagnostics/: BUILD.gn  DiagnosticTracing.cpp  DiagnosticTracing.h
(+36 files in other folders)
